Fix scrollbar issue in safari and google in mobile

--- a/my_website/src/index.css
+++ b/my_website/src/index.css
@@ -11,3 +11,9 @@
 @theme {
   --breakpoint-sm: 766px;
 }
+
+html, body {
+  overscroll-behavior-y: none;
+  /* Optional: prevents iOS Safari from double-tap zooming */
+  touch-action: pan-x pan-y; 
+}
